--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -232,6 +232,8 @@ CONFIG_VLAN_8021Q=m
 CONFIG_6LOWPAN=m
 CONFIG_IEEE802154=m
 CONFIG_IEEE802154_6LOWPAN=m
+CONFIG_CFG80211=m
+CONFIG_MAC80211=m
 CONFIG_MAC802154=m
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_HTB=y
