--- a/net/mac80211/Kconfig
+++ b/net/mac80211/Kconfig
@@ -1,7 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0-only
 config MAC80211
-	tristate "Generic IEEE 802.11 Networking Stack (mac80211)"
-	depends on CFG80211
+	# tristate "Generic IEEE 802.11 Networking Stack (mac80211)"
+	default m
+        depends on CFG80211
 	select CRYPTO
 	select CRYPTO_LIB_ARC4
 	select CRYPTO_AES
